Added image id, debugging output

--- a/game_u_i.mustache
+++ b/game_u_i.mustache
@@ -11,7 +11,7 @@
 	<body>
 		{{#authenticated}}
 			<p>Which photo's location is closest to you?</p>
-			<div id="photos"></div>
+			<ul id="photos"></ul>
 		{{/authenticated}}
 		{{^authenticated}}
 			<p>Unable to authenticate you on Flickr's API.</p>
