Changed photo tags to load city ckylines. Added 'scroll to closest' on select.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,6 @@
-/*.hidden { display: none;}*/
-#photos li { display: block; float: left; width: 20%; overflow: hidden;}
+.label { display: none;}
+#photos { width: 50%; margin: auto; }
+#photos li { display: block; }
 #photos li img { width: 100%; }
 #photos li p { bottom: -40px; }
 /*.wrong { opacity: 0.2; }
