Added 'loading images'

--- a/game_u_i.mustache
+++ b/game_u_i.mustache
@@ -14,6 +14,7 @@
 			{{#authenticated}}
 				<a href="#" id="retry-link">Retry</a>
 				<h2>Which photo's location is closest to you?</h2>
+				<p id="loading">Loading Images...</p>
 				<ul id="photos"></ul>
 			{{/authenticated}}
 			{{^authenticated}}
