Added retry link to flickr error notice

--- a/game_u_i.mustache
+++ b/game_u_i.mustache
@@ -12,7 +12,7 @@
 		<div id="main">
 			<div id="errors"></div>
 			{{#authenticated}}
-				<a href="#" id="retry-link">Retry</a>
+				<a href="#" id="retry-link" class="retry-link">Load new image set</a>
 				<h2>Which photo's location is closest to you?</h2>
 				<p id="loading">Loading Images...</p>
 				<ul id="photos"></ul>
