add rounded top corners to photo containers

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,6 @@ body { font-family: sans-serif; }
 .label { display: none; margin-bottom: 0px; }
 #main { width: 50%; margin: auto; }
 #photos { padding: 0px; margin: 0px; }
-#photos li { display: block; }
+#photos li { display: block; overflow: hidden; border-radius: 10px 10px 0px 0px; }
 #photos li img { width: 100%; }
 #photos li p { position: relative; bottom: 35px; background: rgba(0, 0, 0, 0.4); color: #FFF; font: bold 15px Helvetica; padding: 5px 10px; margin: 0px; }
